--- a/configs/minent.yml
+++ b/configs/minent.yml
@@ -2,11 +2,11 @@ SOURCE: GTA
 TARGET: Cityscapes
 NUM_WORKERS: 4
 TRAIN:
-  DA_METHOD: AdvEnt
+  DA_METHOD: MinEnt
   MODEL: DeepLabv2
   RESTORE_FROM: ../../pretrained_models/DeepLab_resnet_pretrained_imagenet.pth
   MULTI_LEVEL: True
-  LAMBDA_ADV_MAIN: 0.001
-  LAMBDA_ADV_AUX: 0.0002
+  LAMBDA_ENT_MAIN: 0.001
+  LAMBDA_ENT_AUX: 0.0002
 TEST:
   MODE: best
